# ex_spreadsheet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.Spreadsheet.Calamine.exs  mix.exs
.github/workflows/: release.yml  tests.yml
benchmarks/: RESULTS.md  benchmark.exs
config/: config.exs
lib/: spreadsheet.ex
lib/spreadsheet/: calamine.ex
native/spreadsheet/: Cargo.toml  README.md
native/spreadsheet/src/: lib.rs
test/: spreadsheet_test.exs
test/files/: test_file_1.ods  test_file_1.xls  test_file_1.xlsx  test_file_1_hidden.xlsx  test_file_1_hidden_2.xlsx
