[package]
name = "spreadsheet"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "spreadsheet"
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.26.1", features = ["dates"]}
rustler = {version = "0.36.1", features = ["serde"]}
zip = {version = "2.5.x"}
chrono = "0.4.40"
serde = "1.0.219"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
