[package]
name = "spreadsheet"
version = "0.2.0"
authors = []
edition = "2021"

[lib]
name = "spreadsheet"
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.29.0", features = ["dates"]}
rustler = {version = "0.36.2", features = ["serde"]}
chrono = "0.4.41"
serde = "1.0.219"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
